@@ -4,9 +4,8 @@
 Have pop-up menu on tab headers (i.e. game menu).
 Advanced save options (i.e. PGN fields).
 Supply application/x-chess-pgn icons
-LAN game support
+LAN game support (ad-hoc ggz server?)
 Make configuration dialog (with AI config too)
-Don't autosave games that have finished (move into a history file)
 Reflect chess pieces in board
 Chess piece shadows
 Anti-aliasing
@@ -14,9 +13,10 @@ Drag and drop 2D pieces
 Drag and drop application/x-chess-pgn files
 Use Red Robot for the AI player icon!
 Share textures and display lists between games
-Allow resigning
 Unifiy save format with KDE's Knights interface
 Allow multiple chess windows using dbus to make an app singleton - this means the history database can be synchronised
+When making a draw have the UI ask if the player wants to make a move first or claim now (or abort)
+Allow options for starting new network tables (name, clock etc)
 
 1.2+ Features
 --------------
