@@ -1,3 +1,7 @@
+2007-10-07  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Disable navigation buttons when at start/end of moves (Bug #440920)
+
 2007-10-06  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Merged glchess-ggz branch to give glchess initial ggz support	 (Bug #392280)
